[package]
name = "peppercorn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path="src/lib.rs"

# On MacOS, `brew install michaeleisel/zld/zld`
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]


[dependencies]
actix-web = "4"
reqwest = "0.11.10"
tokio = {version = "1", features=["macros", "rt-multi-thread"]}
serde = { version = "1", features = ["derive"]}
config = "0.13.1"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.19"
env_logger = "0.9.0"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.5"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]
